stage0/tests/compile_fail/types/deref_non_pointer.dg
func main() -> i32 {
    let x = 1
    *x
}
